feat(validation): add input validation in services feat(error-handling): implement centralized error handling using @ControllerAdvice