@@ -3,14 +3,16 @@ package com.example.ths_java_spring_boot_project.service;
 import com.example.ths_java_spring_boot_project.dto.UserRequestDto;
 import com.example.ths_java_spring_boot_project.dto.UserResponseDto;
 import com.example.ths_java_spring_boot_project.entity.User;
+import com.example.ths_java_spring_boot_project.exception.ResourceNotFoundException;
 import com.example.ths_java_spring_boot_project.repository.UserRepository;
+import org.hibernate.service.spi.ServiceException;
 import org.mindrot.jbcrypt.BCrypt;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -21,68 +23,81 @@ public class UserService {
     }
 
     public List<UserResponseDto> getAllUsers() {
-        return userRepository.findAll().stream()
-                .map(this::getUserResponseDto)
-                .collect(Collectors.toList());
+        List<User> users = userRepository.findAll();
+
+        if (users == null) {
+            return Collections.emptyList();
+        }
+
+        try {
+            return users.stream()
+                    .map(this::toUserResponseDto)
+                    .toList();
+        } catch (Exception e) {
+            throw new ServiceException("An error occurred while retrieving users", e);
+        }
     }
 
-    public Optional<UserResponseDto> getUserById(Long id) {
+    public UserResponseDto getUserById(Long id) {
         return userRepository.findById(id)
-                .map(this::getUserResponseDto);
+                .map(this::toUserResponseDto)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + id));
     }
 
-    public UserResponseDto saveUser(UserRequestDto userRequestDto) {
+    public UserResponseDto createUser(UserRequestDto userRequestDto) {
+        validateUser(userRequestDto);
         String hashedPassword = hashPassword(userRequestDto.getPlainPassword());
-        User savedUser = userRepository.save(getUser(userRequestDto, hashedPassword));
-        return getUserResponseDto(savedUser);
+        User savedUser = userRepository.save(toUserEntity(userRequestDto, hashedPassword));
+        return toUserResponseDto(savedUser);
     }
 
-    public Optional<UserResponseDto> updateUserById(Long id, UserRequestDto userRequestDto) {
+    public UserResponseDto updateUser(Long id, UserRequestDto updatedUser) {
+        validateUser(updatedUser);
         Optional<User> optionalUser = userRepository.findById(id);
 
         if (optionalUser.isEmpty()) {
-            return Optional.empty();
+            throw new ResourceNotFoundException("User not found with ID: " + id);
         }
 
         User user = optionalUser.get();
-        user.setFirstName(userRequestDto.getFirstName());
-        user.setLastName(userRequestDto.getLastName());
-        user.setEmail(userRequestDto.getEmail());
+        user.setFirstName(updatedUser.getFirstName());
+        user.setLastName(updatedUser.getLastName());
+        user.setEmail(updatedUser.getEmail());
 
-        if (userRequestDto.getPlainPassword() != null && !userRequestDto.getPlainPassword().isBlank()) {
-            user.setHashedPassword(hashPassword(userRequestDto.getPlainPassword()));
+        if (updatedUser.getPlainPassword() != null && !updatedUser.getPlainPassword().isBlank()) {
+            user.setHashedPassword(hashPassword(updatedUser.getPlainPassword()));
         }
 
         User savedUser = userRepository.save(user);
-        return Optional.of(getUserResponseDto(savedUser));
+        return toUserResponseDto(savedUser);
     }
 
     public void deleteUserById(Long id) {
+        if (!userRepository.existsById(id)) {
+            throw new ResourceNotFoundException("User does not exist with ID: " + id);
+        }
+
         userRepository.deleteById(id);
     }
 
-    private UserResponseDto getUserResponseDto(User user) {
-        UserResponseDto userResponseDto = new UserResponseDto(
+    private UserResponseDto toUserResponseDto(User user) {
+        return new UserResponseDto(
                 user.getId(),
                 user.getFirstName(),
                 user.getLastName(),
                 user.getEmail(),
                 user.getRegistrationDate()
         );
-
-        return userResponseDto;
     }
 
-    private User getUser(UserRequestDto userRequestDto, String hashedPassword) {
-        User user = new User(
+    private User toUserEntity(UserRequestDto userRequestDto, String hashedPassword) {
+        return new User(
                 userRequestDto.getFirstName(),
                 userRequestDto.getLastName(),
                 userRequestDto.getEmail(),
                 hashedPassword,
                 LocalDateTime.now()
         );
-
-        return user;
     }
 
     private String hashPassword(String plainPassword) {
@@ -91,5 +106,39 @@ public class UserService {
 
     private boolean checkPassword(String plainPassword, String hashedPassword) {
         return BCrypt.checkpw(plainPassword, hashedPassword);
+    }
+
+    private void validateUser(UserRequestDto userRequestDto) {
+        if (userRequestDto.getFirstName() == null || userRequestDto.getFirstName().trim().isEmpty()) {
+            throw new IllegalArgumentException("First name is required");
+        }
+
+        if (userRequestDto.getLastName() == null || userRequestDto.getLastName().trim().isEmpty()) {
+            throw new IllegalArgumentException("Last name is required");
+        }
+
+        String email = userRequestDto.getEmail();
+
+        if (email == null || !email.matches("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$")) {
+            throw new IllegalArgumentException("Invalid email format");
+        }
+
+        if (userRepository.existsByEmail(userRequestDto.getEmail())) {
+            throw new IllegalArgumentException("Email is already registered");
+        }
+
+        String password = userRequestDto.getPlainPassword();
+
+        if (password == null || password.trim().isEmpty()) {
+            throw new IllegalArgumentException("Password is required");
+        }
+
+        if (password.length() < 8) {
+            throw new IllegalArgumentException("Password must be at least 8 characters long");
+        }
+
+        if (!password.matches(".*[A-Za-z].*") || !password.matches(".*\\d.*")) {
+            throw new IllegalArgumentException("Password must contain letters and numbers");
+        }
     }
 }
